--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Project 3</title>
+        <title>Project 3 Energy Consumption in Australia</title>
+        <meta http-equiv="X-UA-Compatiable" content="IE=edge">
+        <<meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     </head>
+
+    <body>
+        <h1 class="landingpage_title">Energy Consumption in Australia</h1>
 
 </html>
